# llm-trace

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
examples/: basic_trace.cpp  json_export.cpp  macro_trace.cpp  span_hierarchy.cpp
include/: llm_trace.hpp
